# Rollback

./: CONTRIBUTING.md  README.md  it.dadib.Rollback.json  meson.build
data/: it.dadib.Rollback.desktop.in  it.dadib.Rollback.gschema.xml  it.dadib.Rollback.metainfo.xml.in  it.dadib.Rollback.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.vala  config.vala  config.vapi  disks.vala  main.vala  meson.build  rollback.gresource.xml  snapshot.vala  system.vala  window.ui  window.vala
src/data/: config-kind.vala  config-list.vala  config-object.vala
src/dbus/: host.vala
src/ui/: config-kind-icon.vala  config-kind-utils.vala  config-list-page.ui  config-list-page.vala  config-page.ui  config-page.vala  config-row.ui  config-row.vala  snapshot-row.ui  snapshot-row.vala  window.ui  window.vala
